--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     kapt 'com.android.databinding:compiler:3.0.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "com.google.dagger:dagger:2.18"
+    implementation "com.google.dagger:dagger-android-support:2.18"
+    kapt "com.google.dagger:dagger-android-processor:2.18"
+    kapt "com.google.dagger:dagger-compiler:2.18"
+
 }
 repositories {
     mavenCentral()
